<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/frg_titutlo_register"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:background="@drawable/supbar"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/frg_tit_registro"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="60"
                android:gravity="center"
                android:text="@string/frg_titulo_register"
                android:textColor="@color/white"
                android:textSize="34sp" />
        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="382dp"
        android:layout_height="303dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/frg_titutlo_register"
        app:layout_constraintTop_toBottomOf="@+id/frg_titutlo_register">

        <EditText
            android:id="@id/frg_register_txt_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/txtNombre" />

        <EditText
            android:id="@+id/frg_register_txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/txtemail" />


        <EditText
            android:id="@+id/frg_register_txt_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/frg_login_password" />

        <EditText
            android:id="@+id/frg_register_txt_RepitePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            tools:text="@string/frg_login_password" />

        <Button
            android:id="@+id/frg_register_btn_entrar"
            style="@style/BtnSecondary"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:color="@color/white"
            android:text="@string/BtnEntrar" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>